Swagger changes for v4ConvertTrajectory
